--- a/css/reset.css
+++ b/css/reset.css
@@ -48,3 +48,17 @@ table {
 	border-collapse: collapse;
 	border-spacing: 0;
 }
+
+* {
+  box-sizing: border-box;
+}
+
+a {
+  text-decoration: none;
+}
+
+img {
+  display: block;
+  max-height: 100%;
+  max-width: 100%;
+}
