--- a/css/styles.css
+++ b/css/styles.css
@@ -222,6 +222,9 @@ img {
   background-color: #fff;
   border: 1px solid #dee2e6;
   border-radius: 5px;
+  transition-property: color, backround-color, border-color;
+  transition-duration: 0.2s;
+  transition-timing-function: ease;
 }
 
 .pagination__link:not(:last-child) {
