--- a/css/style.css
+++ b/css/style.css
@@ -1,14 +1,6 @@
-@import url(../css/reset.css);
-@import url(../css/fonts.css);
-
-:root {
-  --green: #46A358;
-  --dark-gray: #727272;
-  --bg-gray: #FBFBFB;
-  --light-black: #3D3D3D;
-}
-
-body {
-  color: var(--light-black);
-  font-size: 15px;
-}
+@import url(./variables.css);
+@import url(./custom-reset.css);
+@import url(./fonts.css);
+@import url(./base.css);
+@import url(./header.css);
+@import url(./welcome.css);
