--- a/css/base.css
+++ b/css/base.css
@@ -5,13 +5,15 @@ body {
 }
 
 .container {
-  width: 83.3333%;
+  max-width: 1230px;
+  padding-left: 15px;
+  padding-right: 15px;
   margin: 0 auto;
   /* padding-right: 20px;
   padding-left: 20px; */
 }
 
-.btn-green {
+.btn {
   border-radius: 6px;
   background-color: var(--green);
   color: #fff;
