--- a/css/base.css
+++ b/css/base.css
@@ -8,9 +8,8 @@ body {
   max-width: 1230px;
   padding-left: 15px;
   padding-right: 15px;
-  margin: 0 auto;
-  /* padding-right: 20px;
-  padding-left: 20px; */
+  margin-left: auto;
+  margin-right: auto;
 }
 
 .btn {
