--- a/css/style.css
+++ b/css/style.css
@@ -2,5 +2,6 @@
 @import url(./custom-reset.css);
 @import url(./fonts.css);
 @import url(./base.css);
+@import url(./registration.css);
 @import url(./popular-plants.css);
 @import url(./blog.css);
