--- a/css/registration.css
+++ b/css/registration.css
@@ -2,7 +2,7 @@ body {
   font-size: 13px;
 }
 
-.container {
+.container-wrapper {
   position: relative;
   max-width: 500px;
   margin-left: auto;
