--- a/css/base.css
+++ b/css/base.css
@@ -5,15 +5,17 @@ body {
 }
 
 .container {
-  width: 83.3333%;
-  margin: 0 auto;
-  /* padding-right: 20px;
-  padding-left: 20px; */
+  max-width: 1230px;
+  margin-right: auto;
+  margin-left: auto;
+  padding-left: 15px;
+  padding-right: 15px;
 }
 
-.btn-green {
+.btn {
   border-radius: 6px;
   background-color: var(--green);
   color: #fff;
   padding: 8px 16px;
+  cursor: pointer;
 }
