--- a/css/header.css
+++ b/css/header.css
@@ -4,6 +4,7 @@
   justify-content: space-between;
   height: 75px;
   padding-top: 25px;
+  margin-bottom: 12px;
   border-bottom: 1px solid rgba(70, 163, 88, 0.5);
 }
 
@@ -30,6 +31,9 @@
   font-size: 16px;
   color: var(--light-black);
   border-bottom: 3px solid transparent;
+  transition-property: border-color;
+  transition-duration: 0.2s;
+  transition-timing-function: ease;
 }
 
 .nav__link_active {
@@ -57,8 +61,4 @@
 .login__btn p {
   font-size: 16px;
   font-weight: 500;
-}
-
-.login__btn:hover {
-  cursor: pointer;
 }
