--- a/css/welcome.css
+++ b/css/welcome.css
@@ -9,19 +9,17 @@
 }
 
 .welcome__content {
-  width: 50%;
+  max-width: 560px;
   padding-left: 40px;
   font-size: 14px;
 }
 
 .welcome__sub-title {
-  max-width: 500px;
   margin-bottom: 7px;
   font-weight: 500;
 }
 
 .welcome__title {
-  max-width: 500px;
   margin-bottom: 5px;
   font-weight: 900;
   font-size: 70px;
@@ -32,11 +30,13 @@
 }
 
 .welcome__text {
-  max-width: 500px;
   margin-bottom: 44px;
   color: var(--dark-gray);
 }
 
 .welcome__btn {
   text-transform: uppercase;
+  padding: 10px 26px;
+  font-size: 16px;
+  font-weight: 700;
 }
