created section plants

--- a/css/style.css
+++ b/css/style.css
@@ -3,5 +3,4 @@
 @import url(./custom-reset.css);
 @import url(./fonts.css);
 @import url(./base.css);
-@import url(./popular-plants.css);
-@import url(./blog.css);
+@import url(./plants.css);
