--- a/css/base.css
+++ b/css/base.css
@@ -18,3 +18,19 @@ body {
   color: #fff;
   padding: 8px 16px;
 }
+
+.wrapper {
+  max-width: 870px;
+  margin-left: auto;
+  margin-right: auto;
+  padding-left: 15px;
+  padding-right: 15px;
+}
+
+.material-symbols-rounded {
+  font-variation-settings:
+  'FILL' 0,
+  'wght' 400,
+  'GRAD' 0,
+  'opsz' 20
+}
