--- a/css/style.css
+++ b/css/style.css
@@ -2,5 +2,4 @@
 @import url(./custom-reset.css);
 @import url(./fonts.css);
 @import url(./base.css);
-@import url(./header.css);
-@import url(./welcome.css);
+@import url(./footer.css);
