--- a/css/style.css
+++ b/css/style.css
@@ -4,3 +4,5 @@
 @import url(./base.css);
 @import url(./header.css);
 @import url(./welcome.css);
+@import url(./footer.css);
+@import url(./blog.css);
