--- a/css/header.css
+++ b/css/header.css
@@ -14,6 +14,7 @@
 }
 
 .logo__image {
+  display: block;
   width: 100%;
   height: 100%;
   object-fit: contain;
@@ -36,7 +37,7 @@
 .nav-list__link {
   display: block;
   height: 100%;
-  font-family: "Encode Sans Expanded", sans-serif;
+  font-family: "EncodeSansExpanded", sans-serif;
   font-size: 16px;
   white-space: nowrap;
   color: var(--light-black);
@@ -96,7 +97,7 @@
   align-items: center;
   justify-content: space-between;
   padding: 8px 14px;
-  font-family: "Encode Sans Expanded", sans-serif;
+  font-family: "EncodeSansExpanded", sans-serif;
   color: var(--light-black);
   transition-property: color;
   transition-duration: 0.2s;
@@ -137,6 +138,7 @@
   display: flex;
   align-items: center;
   column-gap: 4px;
+  cursor: pointer;
 }
 
 .login__btn p {
