--- a/css/variables.css
+++ b/css/variables.css
@@ -1,6 +1,7 @@
 :root {
-  --green: #46A358;
-  --dark-gray: #727272;
-  --bg-gray: #FBFBFB;
-  --light-black: #3D3D3D;
+  --primary-color: #3D3D3D;
+  --secondary-color: #727272;
+  --accent-color: #46A358;
+  --bg-color: #FBFBFB;
+  --animation-duration: 0.2s;
 }
