--- a/css/footer.css
+++ b/css/footer.css
@@ -5,7 +5,7 @@
 
 .footer__top {
   padding: 24px 25px;
-  background-color: var(--bg-gray);
+  background-color: var(--bg-color);
 }
 
 .footer-row__left {
@@ -34,7 +34,7 @@
   display: block;
   height: 100%;
   width: 1px;
-  background-color: var(--green);
+  background-color: var(--accent-color);
   opacity: 0.1;
 }
 
@@ -67,7 +67,7 @@
 .footer__text {
   font-size: 14px;
   line-height: 1.5;
-  color: var(--dark-gray);
+  color: var(--secondary-color);
 }
 
 .footer-row__right {
@@ -136,14 +136,14 @@
   column-gap: 10px;
   font-size: 14px;
   line-height: 1.5;
-  color: var(--light-black);
+  color: var(--primary-color);
   max-width: 205px;
 }
 
-.material-symbols-rounded {
+/* .material-symbols-rounded {
   font-size: 20px;
-  color: var(--green);
-}
+  color: var(--accent-color);
+} */
 
 .footer__bot {
   padding: 34px 26px;
@@ -157,7 +157,7 @@
 }
 
 .footer__nav-link {
-  color: var(--light-black);
+  color: var(--primary-color);
   line-height: 1.7;
 }
 
@@ -201,6 +201,6 @@
   text-align: center;
   padding-top: 20px;
   padding-bottom: 20px;
-  color: var(--light-black);
+  color: var(--primary-color);
   border-top: 1px solid rgba(70, 163, 88, 0.2);
 }
