created range and added hover effect for btn

--- a/css/base.css
+++ b/css/base.css
@@ -21,6 +21,16 @@ body {
   background-color: var(--accent-color);
   color: #fff;
   padding: 8px 16px;
+  border: 2px solid transparent;
+  transition-property: color, background-color;
+  transition-duration: var(--animation-duration);
+  transition-timing-function: ease-in-out;
+}
+
+.btn:hover {
+  border-color: var(--accent-color);
+  background-color: #fff;
+  color: var(--accent-color);
 }
 
 .icon {
