--- a/css/variables.css
+++ b/css/variables.css
@@ -1,7 +1,7 @@
 :root {
-  --primary-color: #3D3D3D;
+  --primary-color: #3d3d3d;
   --secondary-color: #727272;
-  --accent-color: #46A358;
-  --bg-color: #FBFBFB;
+  --accent-color: #46a358;
+  --bg-color: #fbfbfb;
   --animation-duration: 0.2s;
 }
